made squares look brighter on mobile, hopefully fixed restart function

--- a/src/Styles/layout/_app.scss
+++ b/src/Styles/layout/_app.scss
@@ -108,9 +108,10 @@ div#container {
     div.square {
       border: solid 2px black;
 
-      box-shadow: 0 1px 2px #fff, /*bottom external highlight*/ 0 -1px 1px #666,
-        /*top external shadow*/ inset 0 -12px 12px rgba(0, 0, 0, 0.5),
-        /*bottom internal shadow*/ inset 0 12px 12px rgba(255, 255, 255, 0.8); /*top internal highlight*/
+      box-shadow: 0 1vw 2vw #fff,
+        /*bottom external highlight*/ 0 -0.01vw 0.01vw #666,
+        /*top external shadow*/ inset 0 -1vw 1vw rgba(0, 0, 0, 0.5),
+        /*bottom internal shadow*/ inset 0 1vw 1vw rgba(255, 255, 255, 0.8); /*top internal highlight*/
 
       display: flex;
       align-content: center;
